Fix Schedule Grid title Overflow issue

--- a/jams/static/css/general/workshop_card.css
+++ b/jams/static/css/general/workshop_card.css
@@ -23,6 +23,16 @@
     flex-basis: 100%;
     flex: 1;
     vertical-align: middle;
+    min-width: 70%;
+}
+
+.workshop-title-action-column {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+    flex: 1;
+    vertical-align: middle;
+    min-width: 15%;
 }
 
 .workshop-card {
